tests/ui/entry-point/issue-118772.stderr
error[E0580]: `main` function has wrong type
  --> $DIR/issue-118772.rs:1:1
   |
LL | fn main(_: &i32) {
   | ^^^^^^^^^^^^^^^^ incorrect number of function parameters
   |
   = note: expected signature `fn()`
              found signature `for<'a> fn(&'a i32)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0580`.
