tests/ui/entry-point/issue-118772.rs
fn main(_: &i32) { //~ ERROR `main` function has wrong type
    println!("Hello, world!");
}
